--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "demo:webpack:server": "webpack-dev-server --config demo/webpack.config.js --progress --public --host 0.0.0.0"
   },
   "dependencies": {
-    "recaptcha-v3": "1.2.0"
+    "recaptcha-v3": "^1.2.1"
   },
   "devDependencies": {
-    "@auritylab/tslint-config-base": "^1.0.0",
+    "@auritylab/tslint-config-base": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^5.3.0",
     "tslint": "^5.11.0",
