chore: add eslintrc and lint script to package.jhson

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "types": "dist/ReCaptchaVuePlugin.d.ts",
   "scripts": {
     "build": "tsc",
+    "lint": "eslint \"src/**/*.ts\" \"demo/**/*.ts\"",
     "demo:webpack:server": "webpack-dev-server --config demo/webpack.config.js --progress --public --host 0.0.0.0"
   },
   "dependencies": {
