--- a/package.json
+++ b/package.json
@@ -30,24 +30,23 @@
     "demo:webpack:server": "webpack-dev-server --config demo/webpack.config.js --progress --public --host 0.0.0.0"
   },
   "dependencies": {
-    "@typescript-eslint/eslint-plugin": "2",
-    "eslint": "6",
-    "eslint-config-standard-with-typescript": "^9.0.0",
-    "eslint-plugin-import": "2",
-    "eslint-plugin-node": "10",
-    "eslint-plugin-promise": "4",
-    "eslint-plugin-standard": "4",
     "recaptcha-v3": "^1.6.1"
   },
   "devDependencies": {
-    "@auritylab/tslint-config-base": "^1.0.1",
     "html-webpack-plugin": "^3.2.0",
     "ts-loader": "^6.2.0",
     "typescript": "^3.6.3",
     "vue": "^2.6.10",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
-    "webpack-dev-server": "^3.8.1"
+    "webpack-dev-server": "^3.8.1",
+    "@typescript-eslint/eslint-plugin": "2",
+    "eslint": "6",
+    "eslint-config-standard-with-typescript": "^9.0.0",
+    "eslint-plugin-import": "2",
+    "eslint-plugin-node": "10",
+    "eslint-plugin-promise": "4",
+    "eslint-plugin-standard": "4"
   },
   "peerDependencies": {
     "vue": "^2.6.10"
