--- a/package.json
+++ b/package.json
@@ -33,9 +33,9 @@
     "recaptcha-v3": "^1.8.0"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "4",
-    "eslint": "7",
-    "eslint-config-standard-with-typescript": "^18.0.2",
+    "@typescript-eslint/eslint-plugin": "^4.6.1",
+    "eslint": "^7.13.0",
+    "eslint-config-standard-with-typescript": "^19.0.1",
     "eslint-plugin-import": "2",
     "eslint-plugin-node": "11",
     "eslint-plugin-promise": "4",
