--- a/package.json
+++ b/package.json
@@ -34,14 +34,13 @@
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.27.0",
-    "eslint": "^7.28.0",
+    "eslint": "^7.29.0",
     "eslint-config-standard-with-typescript": "^20.0.0",
-    "eslint-plugin-import": "2",
-    "eslint-plugin-node": "11",
-    "eslint-plugin-promise": "5",
-    "eslint-plugin-standard": "5",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.0",
     "html-webpack-plugin": "^5.3.1",
-    "ts-loader": "^8.1.0",
+    "ts-loader": "^9.2.3",
     "typescript": "^4.3.4",
     "vue": "^3.1.1",
     "webpack": "^5.39.1",
