#117 - Allow late configuration: siteKey
Credit goes to https://github.com/fatfingers23 and his push request https://github.com/AurityLab/vue-recaptcha-v3/pull/161

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
   },
   "include": [
     "src/**/*"
-  ],
+, "demo/src/delaydemo.ts", "demo/src/delaydemo.ts"  ],
   "exclude": [
     "node_modules",
     "demo/*"
